<resources>
    <string name="app_name">TsuMusic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="top100">Top 100</string>
    <string name="More"><u>Xem thêm ></u></string>
    <string name="now_playing"><b>Now Playing</b></string>
    <string name="module_common_welcome_start">Bắt Đầu</string>
    <string name="song_suggesttion">Gợi ý bài hát</string>
    <string name="version">Phiên bản 1.0</string>
    <string name="lyric">Lyric</string>
    <string name="name">Họ tên</string>
    <string name="lyricsong">Lời Bài Hát</string>
    <string name="feature_primary">Các tính năng chính</string>
    <string name="nowplaying">Đang Phát</string>
    <string name="group_name">Made by \u2665 NVT Group</string>
    <string name="songinfo">Thông tin bài hát</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="signup_now">Đăng ký ngay</string>
    <string name="artist">Nghệ sĩ</string>
    <string name="singername">Tên ca sĩ</string>
    <string name="nosongdata">Không có dữ liệu bài hát</string>
    <string name="nolyricsong">Bài hát hiện chưa có lời</string>
    <string name="playlistsname">Tên danh sách</string>
    <string name="playlists">Danh sách phát</string>
    <string name="welcome_tsumusic">Welcome TsuMusic</string>
    <string name="welcome_to_tsumusic">Chào mừng đến với Tsumusic</string>
    <string name="welcome">Welcome </string>
    <string name="equalizer">Equalizer</string>
    <string name="listens">Lượt nghe</string>
    <string name="songname">Tên bài hát</string>
    <string name="sign_in_to_continue">Đăng nhập để tiếp tục</string>
    <string name="equalizer_error">Equalizer mặc định không tìm thấy</string>
    <string name="submit">Xác nhận</string>
    <string name="song">Bài hát</string>
    <string name="album">Album</string>
    <string name="you_email_com">Email của bạn</string>
    <string name="required">Yêu cầu*</string>
    <string name="create_an_account">Tạo tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="album_name">Tên album</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="oldpassword">Mật khẩu cũ</string>
    <string name="newpassword">Mật khẩu mới</string>
    <string name="genre">Thể loại</string>
    <string name="genrename">Tên thể loại</string>
    <string name="confirmnewpassword">Xác nhận mật khẩu mới</string>
    <string name="introduce">Ứng dụng nghe nhạc mọi lúc,
        mọi nơi chỉ cần có kết nối internet. Bạn có thể lắng nghe những bài hát,
        những album, hoặc những playlist hay nhất của nghệ sĩ bạn yêu thích.</string>
    <string name="contact">Liên hệ: support@tsumusics.com</string>
    <string name="don_t_have_account">Chưa có tài khoản?</string>
    <string name="confirm_password">Confirm PassWord</string>
    <string name="ng_xu_t_t_i_kho_n">Đăng Xuất</string>
    <string name="signin">Đăng Nhập</string>
    <string name="icon_desc">Icon button</string>
    <string name="i_have_already_account">Đã có tài khoản?</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="guide">  <![CDATA[<u><b>1. Tìm kiếm</b></u><br>
                           Để tìm kiếm Bài hát/Ca sĩ trên ứng dụng Tsumusic. Bạn làm theo các hướng dẫn sau:<br><br>
                          <b>B1:</b> Nhập từ khoá cần tìm vào khung tìm kiếm ở tab tìm kiếm<br>
                          <b>B2:</b> Tại đây sẽ xổ ra danh sách bài hát,ca sĩ gợi ý<br>
                          <b>B3:</b> Chọn nội dụng mà bạn đang cần tìm<br><br><br>

                          <u><b color=#0000FF>2. Phát nhạc</b></u><br>
                          Để nghe nhạc/album nhạc/nhạc của sĩ/playlist nhạc chúng ta cần những bước sau:<br><br>
                          <b>B1:</b> Tại màn hình chính có 3 tab phát nhạc chính tương tứng với <b>\"Trang chủ\"</b>, <b>\"Bài hát\"</b>, <b>\"Nghệ sĩ\"</b><br>
                          <b>&#8250</b> <b>Trang chủ</> Bạn có thể nghe nhạc từ banner, album,playlist và các bài hát gợi ý<br>
                          <b>&#8250</b> <b>Bài hát</> Tổng hợp tất cả bài hát được tải lên<br>
                          <b>&#8250</b> <b>Nghệ sĩ</> Tổng hợp list nhạc của các ca sĩ<br>
                           <b>B2:</b> Chọn nhạc hoặc danh sách nhạc cần phát<br>
                           <b>&#8250</b> Click vào item các bài hát nếu bạn muốn nghe từng bài<br>
                           <b>&#8250</b> Click vào nút play nếu bạn muốn nghe toàn một nhạc của playlist đó<br>
                           <b>B3:</b> Để phát nhạc ngẫu nhiên, lặp lại bài hát đang nghe<br>
                           <b>&#8250</b> Phát ngẫu nhiên bài hát: chọn vào nút <b>\"Shuffer\"</b> nằm phía bên trái nút \"Back bài hát\"<br>
                            <b>&#8250</b> Lặp lại bài hát đang nghe: chọn vào nút <b>\"Repeat\"</b> nằm phía bên phải nút \"Next bài hát\"<br>]]>
     </string>

</resources>