<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary"
    tools:context=".Activity.AppinformationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarappinformation"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <RelativeLayout
        android:id="@+id/relavtivelogoapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarappinformation"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/logoapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_logoapp01" />

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoapp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/utm_sharnay"
            android:text="@string/app_name"
            android:textSize="46dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appname"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/version"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relavtivelogoapp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/introduce"
            android:id="@+id/txtgioithieu"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_below="@id/txtgioithieu"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/contact"
            android:textSize="16sp" />
    </RelativeLayout>


</RelativeLayout>

