<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="270dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:id="@+id/textviewthongtinbaihat"
        android:text="@string/songinfo"
        android:textAllCaps="true"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_below="@id/textviewthongtinbaihat"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tenbaihatinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songname"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textviewtenbaihatdangnghe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:layout_toRightOf="@+id/tenbaihatinfo"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Yêu Đơn Phương"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tennghesiinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tenbaihatinfo"
            android:layout_marginTop="20dp"
            android:text="@string/singername"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textviewtennghesihat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tenbaihatinfo"
            android:layout_marginLeft="58dp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/tennghesiinfo"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Only C"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/luotnghe"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewtennghesihat"
            android:layout_marginTop="20dp"
            android:text="Lượt nghe"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textviewluotnghebaihat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewtennghesihat"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/luotnghe"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="1M"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ngayphathanh"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewluotnghebaihat"
            android:layout_marginTop="20dp"
            android:text="Ngày PH"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textviewngayphathanhbaihat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewluotnghebaihat"
            android:layout_marginLeft="58.5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/ngayphathanh"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="24-05-2021"
            android:textSize="16sp" />
    </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>