<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary"
    tools:context=".Activity.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/textTitle"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logoapp02" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_an_account"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tạo mới một tài khoản"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                android:textStyle="normal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/LayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/CreateName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-9dp"
                        android:hint="@string/name"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorRed"
                        app:startIconDrawable="@drawable/ic_account">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="-20dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/LayoutUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/CreateUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-9dp"
                        android:hint="@string/user_name"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorRed"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="-20dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="yes"
                            android:inputType="textNoSuggestions"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/LayoutPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/CreatePassWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-9dp"
                        android:hint="@string/password"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorRed"
                        app:startIconDrawable="@drawable/ic_lock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="-20dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/LayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-9dp"
                        android:hint="@string/you_email_com"
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorRed"
                        app:startIconDrawable="@drawable/ic_email">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="-20dp"
                            android:background="@null"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="yes"
                            android:inputType="textEmailAddress"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button

                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/roboto_medium"
                android:background="@color/transparent"
                android:text="@string/create_an_account"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/i_have_already_account"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textSingIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/login_now"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>